--- a/postlaunch/success.html
+++ b/postlaunch/success.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
 	<title>Techbook: Success</title>
+	<link rel="icon" href="images/logo.ico" type="image/x-icon">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
