--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -68,16 +68,17 @@
 								<div class="flipster">
 									<ul class="flip-items">
 										<li class="yt-item--post techbook" id="1">
-											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/sciencemiddle-active-Book.png" onclick="bluebooktechbook()">
+											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/sciencemiddle-active-Book.png" onclick="greenbooktechbook()">
 										</li>
 										<li class="yt-item--post techbook" id="2">
 											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/middle-active-Book.png" onclick="REDbooktechbook()">
 										 </li>
 										<li class="yt-item--post techbook" id="3">
-											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/mathmiddle-active-Book.png" onclick="greenbooktechbook()">
+											<img src="https://techbookprelaunch.netlify.app/postlaunch/images/mathmiddle-active-Book.png" onclick="bluebooktechbook()">
 										</li>
 									</ul>
 								</div>	
+								<p style="text-align: center; margin-top: 10px;">Click to explore</p>
 							</div>
 						</div>	
 					</div>
