--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -78,7 +78,7 @@
 										</li>
 									</ul>
 								</div>	
-								<p style="text-align: center; margin-top: 10px;">Click to explore</p>
+								<p style="text-align: center; margin-top: 10px; font-size: 1.3rem">Click to explore</p>
 							</div>
 						</div>	
 					</div>
