--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -389,7 +389,7 @@
 						<h4>For which subjects is The Techbook available?<span class="icon">+</span></h4>
 						<div class="details">The Techbook is currently available for Math, Science & English.</div>
 						<h4>How can I get TECHBOOK for my school?<span class="icon">+</span></h4>
-						<div class="details">Techbook is currently available by Invitation Only. To get your exclusive invite code, either get in touch with your Pinnacle Representative OR fill out your <a href="https://techbookprelaunch.netlify.app/postlaunch/prebook.html?needinvitecode">details here</a> -<4AM to put><></div>
+						<div class="details">Techbook is currently available by Invitation Only. To get your exclusive invite code, either get in touch with your Pinnacle Representative OR fill out your <a href="https://techbookprelaunch.netlify.app/postlaunch/prebook.html?needinvitecode">details here.</a></div>
 						<h4>Can parents purchase a Techbook directly for their child?<span class="icon">+</span></h4>
 						<div class="details">
 							No. Techbook is available only for students in select new-age schools that pre-book. Check with your school to apply for Techbook.
