--- a/postlaunch/prebook.html
+++ b/postlaunch/prebook.html
@@ -137,7 +137,7 @@
                                                     <button  class="curiousFormSubmit" type="submit">Request Callback</button>
                                                 </aside>
                                             </form>
-                                            <p>You can also call us at <a href="tel:9355994229">Call Us</a> for the same.</p>
+                                            <p>You can also <a href="tel:9355994229">Call Us</a> for the same.</p>
                                         </div>
                                         <!-- form start -->
 
