--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -254,7 +254,7 @@
 					<div id="sciencebook" class="productslide">
 						<div class="row">
 							<div class="col-35">
-								<div class="image"><img src="images/sciencemiddle-active-Book.png" alt="Red book"><a href="javascript:;" class="scienceclickexplore">CLICK TO EXPLORE</a></div>
+								<div class="image"><img src="images/sciencemiddle-active-Book.png" alt="Red book" class="scienceclickexplore"><a href="javascript:;" class="scienceclickexplore">CLICK TO EXPLORE</a></div>
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
@@ -276,7 +276,7 @@
 					<div id="englishbook" class="productslide">
 						<div class="row">
 							<div class="col-35">
-								<div class="image"><img src="images/middle-active-Book.png" alt="Red book"><a href="javascript:;" class="englishclickexplore">CLICK TO EXPLORE</a></div>
+								<div class="image"><img src="images/middle-active-Book.png" alt="Red book" class="englishclickexplore"><a href="javascript:;" class="englishclickexplore">CLICK TO EXPLORE</a></div>
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
@@ -298,7 +298,7 @@
 					<div id="mathbook" class="productslide">
 						<div class="row">
 							<div class="col-35">
-								<div class="image"><img src="images/mathmiddle-active-Book.png" alt="Red book"><a href="javascript:;" class="mathclickexplore">CLICK TO EXPLORE</a></div>
+								<div class="image"><img src="images/mathmiddle-active-Book.png" alt="Math book" class="mathclickexplore"><a href="javascript:;" class="mathclickexplore">CLICK TO EXPLORE</a></div>
 							</div>
 							<div class="col-6">
 								<div class="bookFeature">
@@ -389,7 +389,7 @@
 						<h4>For which subjects is The Techbook available?<span class="icon">+</span></h4>
 						<div class="details">The Techbook is currently available for Math, Science & English.</div>
 						<h4>How can I get TECHBOOK for my school?<span class="icon">+</span></h4>
-						<div class="details">Techbook is currently available by Invitation Only. To get your exclusive invite code, either get in touch with your Pinnacle Representative OR fill out your <a href="https://techbookprelaunch.netlify.app/postlaunch/prebook.html?needinvitecode">details here.</a></div>
+						<div class="details">Techbook is currently available by Invitation Only. To get your exclusive invite code, either get in touch with your Pinnacle Representative OR fill out your <a href="https://thetechbook.ai/prebook.html?needinvitecode">details here.</a></div>
 						<h4>Can parents purchase a Techbook directly for their child?<span class="icon">+</span></h4>
 						<div class="details">
 							No. Techbook is available only for students in select new-age schools that pre-book. Check with your school to apply for Techbook.
