--- a/postlaunch/lottie.html
+++ b/postlaunch/lottie.html
@@ -41,7 +41,7 @@ body {
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'images/open.json' // Update this path
+        path: 'images/BLUE_Book_Open_ARI.json' // Update this path
     });
 
     var animation = lottie.loadAnimation({
@@ -49,7 +49,7 @@ body {
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'images/select.json' // Update this path
+        path: 'images/BLUE_Book_Fold 2_PIE.json' // Update this path
     });
 
        
