--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -163,7 +163,7 @@
 								<div class="slide">
 									<div class="slideinnr">
 										<div id="bluebook2"></div>
-										<img src="images/Open-Blue-Book-new.png" alt="">
+										<!-- <img src="images/Open-Blue-Book-new.png" alt=""> -->
 										<div class="btnbox">
 											<a href="javascript:;" onclick="showpiePopup()" class="posurl">
 											</a>
