--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -542,7 +542,7 @@
         var animation = lottie.loadAnimation({
         container: document.getElementById('bluebook1'),
         renderer: 'svg',
-        loop: true,
+        loop: false,
         autoplay: true,
         path: 'images/BLUE_Book_Open_ARI.json' // Update this path
     });
