--- a/postlaunch/prebook.html
+++ b/postlaunch/prebook.html
@@ -102,7 +102,7 @@
                                             <span class="tbfront"><input class="curiousFormInput cfi2" type="text" name="checkinvitecode" id="checkinvitecode" maxlength="6"/></span>
                                             <span class="curiousFormError cfe2" id="error_checkinvitecode" style="display:none;"></span>
                                             <aside>
-                                                <span class="curiousFormSubmit cfs2" onclick="invitecodeHandler();">Validate Invite Code</span>
+                                                <span class="curiousFormSubmit cfs2" onclick="invitecodeHandler();">Pay Now</span>
                                             </aside>
                                         </div>
                                         
