--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -547,7 +547,7 @@
         renderer: 'svg',
         loop: false,
         autoplay: true,
-        path: 'images/BLUE_Book_Open_ARI.json' // Update this path
+        path: 'images/BLUE_Book_Open_ARI_min.json' // Update this path
     });
 
     var animations = lottie.loadAnimation({
@@ -555,7 +555,7 @@
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'images/BLUE_Book_Fold 2_PIE.json' // Update this path
+        path: 'images/BLUE_Book_Fold_02_PIE_min.json' // Update this path
     });
 
 animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
@@ -566,7 +566,7 @@ animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'images/redbook1.json' // Update this path
+        path: 'images/RED_Book_Open_min.json' // Update this path
     });
 
     animationss.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
@@ -575,14 +575,14 @@ animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
         renderer: 'svg',
         loop: false,
         autoplay: true,
-        path: 'images/greenbook1.json' // Update this path
+        path: 'images/GREEN_Book_Open_ARI_min.json' // Update this path
     });
 	var animationsss = lottie.loadAnimation({
         container: document.getElementById('greenbook2'),
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'images/greenbook2.json' // Update this path
+        path: 'images/GREEN_Book_Fold 02_PIE_min.json' // Update this path
     });
 
     animationsss.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
