--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -582,7 +582,7 @@ animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'images/GREEN_Book_Fold 02_PIE_min.json' // Update this path
+        path: 'images/GREEN_Book_Fold02_PIE_min.json' // Update this path
     });
 
     animationsss.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
