--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -130,6 +130,7 @@
 								<div class="slide">
 									<div class="slideinnr">
 										<!-- <img src="images/Open-Red-Book-new.png" alt=""> -->
+										 <div class="loader"><p><img src="images/loader.gif" alt="loader">Loading...</p></div>
 										<div id="redbook1"></div>
 										<div class="btnbox">
 											<a href="javascript:void(0)" onclick="showPopup()" class="posurl irabookvideo">												
@@ -762,6 +763,10 @@ animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
 				dots: false,
 				pauseOnHover: false,
 			});
+			
+			setTimeout(function() {
+                $('.loader').hide();
+			}, 10000);// 2000 milliseconds = 2 seconds
 		});
 		function showPopup() {
 			$('.iraredbook').show();
