--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -154,6 +154,7 @@
 							<div class="bookslider">
 								<div class="slide">
 									<div class="slideinnr">
+										<div class="loader"><p><img src="images/loader.gif" alt="loader">Loading...</p></div>
 										<!-- <img src="images/Open-Green-Book-1-new.png" alt=""> -->
 										<div id="bluebook1"></div>
 										<div class="btnbox">
@@ -164,6 +165,7 @@
 								</div>
 								<div class="slide">
 									<div class="slideinnr">
+										<div class="loader"><p><img src="images/loader.gif" alt="loader">Loading...</p></div>
 										<div id="bluebook2"></div>
 										<!-- <img src="images/Open-Blue-Book-new.png" alt=""> -->
 										<div class="btnbox">
@@ -188,6 +190,7 @@
 							<div class="bookslider">
 								<div class="slide">
 									<div class="slideinnr">
+										<div class="loader"><p><img src="images/loader.gif" alt="loader">Loading...</p></div>
 										<!-- <img src="images/Open-Green-Book-new.png" alt=""> -->
 										<div id="greenbook1"></div>
 										<div class="btnbox">
@@ -198,6 +201,7 @@
 								</div>
 								<div class="slide">
 									<div class="slideinnr">
+										<div class="loader"><p><img src="images/loader.gif" alt="loader">Loading...</p></div>
 										<!-- <img src="images/Open-green-Book--1new.png" alt=""> -->
 										<div id="greenbook2"></div>
 										<div class="btnbox">
