--- a/postlaunch/index.html
+++ b/postlaunch/index.html
@@ -567,7 +567,7 @@ animations.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
         renderer: 'svg',
         loop: true,
         autoplay: true,
-        path: 'images/RED_Book_Open_min.json' // Update this path
+        path: 'images/redbook1.lottie' // Update this path
     });
 
     animationss.setSpeed(0.5); // Set to 0.5 for half speed, adjust as needed
